# machine-learning

./: LICENSE  ai_ml_dl_2026.md  e2e_ml_process.md  lo-trinh-hop-nhat-24-tuan-ml-dl-tensorflow.md  pyproject.toml
learning/week-01-python-data-foundations/: 01-knowledge.md  02-reading-list.md  03-schedule.md  README.md  VALIDATION.md  report-template.md  requirements.txt
learning/week-01-python-data-foundations/assessment/: practical-test.md  quiz.md  rubric.md
learning/week-01-python-data-foundations/challenge/: README.md  __init__.py  submission.py
learning/week-01-python-data-foundations/data/: README.md  customer_orders_raw.csv  customers.csv  practical_test_orders.csv
learning/week-01-python-data-foundations/exercises/: README.md  __init__.py  starter.py
learning/week-01-python-data-foundations/notebooks/: 01-numpy-vectorization.ipynb  02-guided-eda.ipynb
learning/week-01-python-data-foundations/solutions/: README.md  __init__.py  data_cleaning_solution.py  exercise_solutions.py  practical-test-solution.md  (+3 more)
learning/week-02-math-linear-regression/: .gitignore  01-knowledge.md  02-reading-list.md  03-schedule.md  README.md  VALIDATION.md  pytest.ini  report-template.md  requirements.txt
learning/week-03-statistics-model-evaluation/: 01-knowledge.md  02-reading-list.md  03-schedule.md  README.md  VALIDATION.md  report-template.md  requirements.txt
learning/week-04-ml-problem-framing/: .gitignore  01-knowledge.md  02-reading-list.md  03-schedule.md  README.md  VALIDATION.md  report-template.md  requirements.txt
notebooks/: 01_numpy.ipynb
(+93 files in other folders)
